--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,9 +19,9 @@
     <meta name="description" content="{{ site.description }}">
 	<meta name='robots' content='noindex,follow' />
 	<link rel="alternate" type="application/rss+xml" title="Kings Hill Pre-school &raquo; Home Comments Feed" href="{{ site.url }}/feed/">
-	<link rel='stylesheet' id='style-css'  href='{{ site.url }}/assets/css/style.css' type='text/css' media='all'>
-	<script type='text/javascript' src='{{ site.url }}/assets/js/jquery/jquery.js?ver=1.11.1'></script>
-	<script type='text/javascript' src='{{ site.url }}/assets/js/jquery/jquery-migrate.min.js?ver=1.2.1'></script>    
+	<link rel='stylesheet' id='style-css'  href='{{ site.baseurl }}/assets/css/style.css' type='text/css' media='all'>
+	<script type='text/javascript' src='{{ site.baseurl }}/assets/js/jquery/jquery.js?ver=1.11.1'></script>
+	<script type='text/javascript' src='{{ site.baseurl }}/assets/js/jquery/jquery-migrate.min.js?ver=1.2.1'></script>    
 </head>
 <body class="{{ page.title | slugify }}">
 
