fix up site.baseurl

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
  <footer class="site-footer">
-    <div class="logo"><img src="{{ site.url }}/assets/img/khp-logo-light-320.png" alt="Kings Hill Pre School Logo"></div>
+    <div class="logo"><img src="{{ site.baseurl }}/assets/img/khp-logo-light-320.png" alt="Kings Hill Pre School Logo"></div>
     <div class="container cf contact-and-social-container">
         <div class="col-1-2 footer-contact-container">
         <h2>Get In Touch</h2>
