--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,11 +46,11 @@
       </div><!-- /search-block -->
       <!-- contact-block -->
       <div class="contact-block">
-        <a href="mailto:{{ site.social.email }}" title="email KingsHill Pre-school"><img class="contact-icon contact-icon-envelope" src="/assets/img/envelope-33x32.png" alt="envelope icon"></a><img class="contact-icon contact-icon-telephone" src="/assets/img/telephone-32x32.png" alt="telephone icon"> 01732 840 180
+        <a href="mailto:{{ site.social.email }}" title="email KingsHill Pre-school"><img class="contact-icon contact-icon-envelope" src="{{ site.baseurl }}/assets/img/envelope-33x32.png" alt="envelope icon"></a><img class="contact-icon contact-icon-telephone" src="{{ site.baseurl }}/assets/img/telephone-32x32.png" alt="telephone icon"> 01732 840 180
       </div><!-- /contact-block -->
     </div><!-- /contact-search-block -->
 
-    <div class="logo"><a href="{{ site.url }}"><img src="{{ site.url }}/assets/img/khp-logo-320.png" alt="Kings Hill Pre School Logo"></a></div>
+    <div class="logo"><a href="{{ site.url }}{{ site.baseurl }}"><img src="{{ site.baseurl }}/assets/img/khp-logo-320.png" alt="Kings Hill Pre School Logo"></a></div>
 
 {% include nav.html %}
 
