--- a/_includes/this-term.html
+++ b/_includes/this-term.html
@@ -1,7 +1,7 @@
 <aside class="latest-cat-container latest-cat-colour-yellow"><h2>This Term We are...</h2><div class="latest-cat-post"><div class="aspect-square">        
   <div class="latest-cat-date"><span class="latest-cat-date-day">17</span><span class="latest-cat-date-month-year">Sep 2015</span></div><!-- /latest-cat-date -->
     <div class="latest-cat-image">
-      <div class="latest-cat-image-inner"><img src="{{ site.url }}/assets/img/children-reading-news.jpg">      </div><!-- /latest-cat-image-inner -->
+      <div class="latest-cat-image-inner"><img src="{{ site.baseurl }}/assets/img/children-reading-news.jpg">      </div><!-- /latest-cat-image-inner -->
     </div><!-- /latest-cat-image -->
   <div class="latest-cat-header"><strong>New Term</strong></div><!-- latest-cat-header -->
   <div class="latest-cat-body">Something here&#8230;</div><!-- latest-cat-body -->
