--- a/_includes/latest-news.html
+++ b/_includes/latest-news.html
@@ -4,12 +4,12 @@
     <div class="aspect-square">        
       <div class="latest-cat-date"><span class="latest-cat-date-day">{{ post.date | date: "%d" }}</span><span class="latest-cat-date-month-year">{{ post.date | date: "%b %Y" }}</span></div><!-- /latest-cat-date -->
       <div class="latest-cat-image">
-      <div class="latest-cat-image-inner"><img width="5759" height="2966" src="{{ site.url }}/assets/img/children-reading-newsletter.jpg" class="attachment-post-thumbnail wp-post-image" alt="TPLT3419e" />      </div><!-- /latest-cat-image-inner -->
+      <div class="latest-cat-image-inner"><img width="5759" height="2966" src="{{ site.baseurl }}/assets/img/children-reading-newsletter.jpg" class="attachment-post-thumbnail wp-post-image" alt="TPLT3419e" />      </div><!-- /latest-cat-image-inner -->
     </div><!-- /latest-cat-image -->
     <div class="latest-cat-header"><strong>{{ post.title }}</strong></div><!-- latest-cat-header -->
     <div class="latest-cat-body">{{ post.content }}</div><!-- latest-cat-body -->
-    <div class="latest-cat-footer"><a href="{{ site.url }}{{ post.url }}">READ MORE</a></div><!-- latest-cat-footer -->
-    <a class="latest-cat-cover-link" href="{{ site.url }}{{ post.url }}"></a>
+    <div class="latest-cat-footer"><a href="{{ site.baseurl }}{{ post.url }}">READ MORE</a></div><!-- latest-cat-footer -->
+    <a class="latest-cat-cover-link" href="{{ site.baseurl }}{{ post.url }}"></a>
   </div><!-- /aspect-square --></div><!-- /latest-cat-post -->
 
 </aside><!-- /latest-cat-container -->
