--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 {% include header.html %}  
 <main>
   <div class="aspectwrapper">
-	 <figure class="hero-image" style="background-image: url('/assets/img/{{ page.hero-image }}');">
+	 <figure class="hero-image" style="background-image: url('{{ site.baseurl }}/assets/img/{{ page.hero-image }}');">
 	   <figcaption><h1>Kings Hill</h1><h2>Pre-school</h2></figcaption>
 	 </figure>
   </div>
