--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,5 @@
-/*
-Theme Name: KHP
-Author: Carl Revell
-Author URI:
-Version: 1.0
-*/
-
+---
+---
 @font-face {
 	font-family: 'droid_serifregular';
   src: url('../fonts/DroidSerif-webfont.eot');
