--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@
   --{{ site.baseurl }}--
   <div class="aspectwrapper">
 	 <figure class="hero-image" style="background-image: url({{ site.baseurl }}/assets/img/{{ page.hero-image }});">
-	   <figcaption><h1 style="color:#201B1F;"">Kings Hill</h1><h2 style="color:#201B1F;"">Pre-school</h2></figcaption>
+	   <figcaption><h1 style="color:#201B1F;">Kings Hill</h1><h2 style="color:#201B1F;">Pre-school</h2></figcaption>
 	 </figure>
   </div><!-- /.aspectwrapper -->
 
