fixed build issues

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,9 +30,9 @@
   <div class="container">
     <br>
   
-    {% include link-box.html url="{{ site.baseurl }}/our-pre-school" text="Our Pre-school" img="{{ site.baseurl }}/assets/img/our-pre-school-300x300.jpg" %}  
-    {% include link-box.html url="{{ site.baseurl }}/find-us" text="Find Us" img="{{ site.baseurl }}/assets/img/find-us-300x300.jpg" %}
-    {% include link-box.html url="{{ site.baseurl }}/contact-us" text="Contact Us" img="{{ site.baseurl }}/assets/img/contact-us-300x300.jpg" %}
+    {% include link-box.html url='/our-pre-school' text='Our Pre-school' img='/assets/img/our-pre-school-300x300.jpg' %}  
+    {% include link-box.html url='/find-us' text='Find Us' img='/assets/img/find-us-300x300.jpg' %}
+    {% include link-box.html url='/contact-us' text='Contact Us' img='/assets/img/contact-us-300x300.jpg' %}
     
     <br>
   </div>
